# Splice_Game

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  Framework_mingw.lib  box2d.lib  box2d_debug.lib  box2d_mingw.lib  box2d_release.lib  box2dd.lib
Code/: Application.cpp  Application.h  Assets.cpp  Assets.h  Controller.cpp  Controller.h  Depths.h  DevicesData.cpp  DevicesData.h  EditorDevicesData.cpp  EditorDevicesData.h  Main.cpp  Pipe.cpp  Pipe.h  Texts.cpp  Texts.h  Utility.cpp  Utility.h  box2dIncluded.h
Code/Components/: .SmokeEmitterComponent.cpp.swp  CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  PhysicsWorldComponent.cpp  PhysicsWorldComponent.h  RigidbodyComponent.cpp  RigidbodyComponent.h  SmokeEmitterComponent.cpp  SmokeEmitterComponent.h  SpriteComponent.cpp  SpriteComponent.h  TestComponent.cpp  TestComponent.h
Code/Components/Editor/: EditorComponent.cpp  EditorComponent.h  EditorControllerGUI.cpp  EditorControllerGUI.h  EditorDeviceComponent.cpp  EditorDeviceComponent.h
Code/Components/Machine/: DeviceComponent.cpp  DeviceComponent.h  DeviceConnectorRendererComponent.cpp  DeviceConnectorRendererComponent.h  MachineComponent.cpp  MachineComponent.h  MachinePartComponent.cpp  MachinePartComponent.h
Code/Devices/: Devices.cpp  Devices.h  DevicesMisc.h  EditorDevices.cpp  EditorDevices.h  IDevicesData.cpp  IDevicesData.h  IEditorDevicesData.cpp  IEditorDevicesData.h  Misc.h  Utils.h
Code/GUI/: Button.cpp  Button.h  GUI.cpp  GUI.h  GUIMouseData.cpp  GUIMouseData.h  IElement.cpp  IElement.h  Label.cpp  Label.h  Page.cpp  Page.h  Slider.cpp  Slider.h  Style.h
Docs/: 装置与编辑器装置的序列化格式.md
